--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/img/desbloquear.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="shortcut icon" href="./img/desbloquear.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Login</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
     <div class="contenedor__login">
         <!--Contenedor Imagen-->
         <div class="contenedor__imagen">
-            <img class="imgIcono" src="/img/plantando.png" alt="">
+            <img class="imgIcono" src="./img/plantando.png" alt="">
             <span class="nombre">Carlos Sánchez</span>
         </div>
         <!--Contenedor Formulario-->
